--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             </svg>
                         </div>
                         <ul tabindex="0"
-                            class="menu menu-sm dropdown-content bg-base-100 text-xl rounded-box z-1 mt-3 w-52 p-2 shadow">
+                            class="menu menu-sm dropdown-content bg-base-100 text-lg rounded-box z-1 mt-3 w-52 p-2 shadow">
                             <li><a>Home</a></li>
                             <li><a>Shop</a></li>
                             <li><a>Blogs</a></li>
@@ -42,7 +42,7 @@
                     <a class="text-xl"><img src="https://i.ibb.co.com/8yy2RGK/svgexport-1-2.png" alt=""></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
-                    <ul class="menu menu-horizontal px-1">
+                    <ul class="menu menu-horizontal text-lg px-1">
                         <li><a>Home</a></li>
                         <li><a>Shop</a></li>
                         <li><a>Blogs</a></li>
@@ -50,8 +50,19 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end">
-                    <a class="btn">Button</a>
+                <div class="navbar-end space-x-4">
+                    <button class="btn text-lg">
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        Cart
+                    </button>
+                    <button class="btn text-lg">
+                        <span><i class="fa-solid fa-user"></i></span>
+                        Login
+                    </button>
+                    <button class="btn text-lg">
+                        <span><i class="fa-solid fa-headset"></i></span>
+                        Support
+                    </button>
                 </div>
             </div>
         </section>
