add hero section

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                         <li><a>Contact</a></li>
                     </ul>
                 </div>
-                <div class="navbar-end space-x-4">
-                    <button class="btn text-lg">
+                <div class="navbar-end md:text-lg space-x-1 md:space-x-4">
+                    <!-- <button class="btn text-lg">
                         <span><i class="fa-solid fa-cart-shopping"></i></span>
                         Cart
                     </button>
@@ -62,7 +62,41 @@
                     <button class="btn text-lg">
                         <span><i class="fa-solid fa-headset"></i></span>
                         Support
-                    </button>
+                    </button> -->
+                    <div>
+                        <span><i class="fa-solid fa-cart-shopping"></i></span>
+                        Cart
+                    </div>
+                    <div>
+                        <span><i class="fa-solid fa-user"></i></span>
+                        Login
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- This is Hero Section -->
+        <section>
+            <div class="hero h-[322px]" style="background-image: url(https://i.ibb.co.com/qLysHtTv/Group-98.png);">
+                <div class="bg-white rounded px-12 py-5 flex flex-col md:flex-row justify-between items-center gap-5">
+                    <div class="border border-[#1B768D] flex items-center gap-3 rounded px-9 py-3">
+                        <span><i class="fa-solid fa-location-dot text-[#1B768D]"></i></span>
+                        <h3 class="text-xl">Divition</h3>
+                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                    </div>
+                    <div class="border border-[#1B768D] rounded flex items-center gap-3 px-9 py-3">
+                        <span><i class="fa-solid fa-location-dot text-[#1B768D]"></i></span>
+                        <h3 class="text-xl">District</h3>
+                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                    </div>
+                    <div class="border border-[#1B768D] rounded flex items-center gap-3 px-9 py-3">
+                        <span><i class="fa-solid fa-location-dot text-[#1B768D]"></i></span>
+                        <h3 class="text-xl">Thana</h3>
+                        <span><i class="fa-solid fa-chevron-down"></i></span>
+                    </div>
+                    <div class="px-9 py-3 bg-[#1B768D] text-white text-center rounded">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <button class="text-xl ml-2">Search</button>
+                    </div>
                 </div>
             </div>
         </section>
