add category section

--- a/index.html
+++ b/index.html
@@ -102,7 +102,39 @@
         </section>
     </header>
     <main>
-
+        <!-- This is Category Section -->
+        <section class="container mx-auto mt-12 mb-12">
+            <div class="flex justify-between items-center">
+                <h1 class="text-2xl font-medium">Category</h1>
+                <p>See All</p>
+            </div>
+            <div class="mt-8 grid grid-cols-2 md:grid-cols-4 lg:grid-cols-6 gap-8">
+                <div class="flex items-center gap-4 bg-[#1B768D] px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/YB82xb6Q/Bag-Store-1.png" alt="">
+                    <h2 class="text-xl text-white">Bag Store</h2>
+                </div>
+                <div class="flex items-center gap-4 bg-white shadow-2xl px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/pvQcFwH9/Shoe-store-1.png" alt="">
+                    <h2>Shoe Store</h2>
+                </div>
+                <div class="flex items-center gap-4 bg-white shadow-2xl px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/tr5pmfw/Men-s-Cloth.png" alt="">
+                    <h2>Mens Cloth</h2>
+                </div>
+                <div class="flex items-center gap-4 bg-white shadow-2xl px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/6cB0GLyC/womens-dress-1.png" alt="">
+                    <h2>Women Cloth</h2>
+                </div>
+                <div class="flex items-center gap-4 bg-white shadow-2xl px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/vCqJG0h6/Watches-1.png" alt="">
+                    <h2>Watches</h2>
+                </div>
+                <div class="flex items-center gap-4 bg-white shadow-2xl px-7 py-4 rounded-xl">
+                    <img src="https://i.ibb.co.com/MyjJMx0W/Sun-Glasses-1.png" alt="">
+                    <h2>Sun Glasses</h2>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
