add 1st store row

--- a/index.html
+++ b/index.html
@@ -135,6 +135,44 @@
                 </div>
             </div>
         </section>
+        <!-- This is Featured ProductSection -->
+        <section class="container mx-auto mb-12">
+            <div class="flex justify-between items-center">
+                <h1 class="text-2xl font-medium">Featured Store</h1>
+                <p>See All</p>
+            </div>
+            <!-- 1st Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/wrgfmf6Q/Rectangle-3.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/wrgfmf6Q/Rectangle-3.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
