add 4th feature store row

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                 </div>
                 <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
                     <div class="ml-6 py-5 space-y-4">
-                        <h2 class="card-title">Bag Packer's</h2>
-                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                        <h2 class="card-title">SamborN</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
                             Rd,Mohammadpur</p>
                         <p class="text-[#1B768D] font-medium">Bag Store</p>
                         <div class="card-actions">
@@ -168,7 +168,100 @@
                         </div>
                     </div>
                     <figure>
-                        <img class="py-5 mr-6" src="https://i.ibb.co.com/wrgfmf6Q/Rectangle-3.png" alt="Movie" />
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/mVGVhf8k/Rectangle-3-1.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 2nd Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">The Bag & Baggage</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Tajmahal
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Lf3zdyt/Rectangle-3-2.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Angel Collection</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/1GXhpfX5/Rectangle-3-3.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 3rd Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Gallery</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Tokyo Square
+                            ,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Nd75b5tY/Rectangle-3-4.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">CIPO Fashions</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Q3ptXxzh/Rectangle-3-5.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 4th Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Yeso</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Tokyo Square
+                            ,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/0R4xBRPt/Rectangle-3-6.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Archies Harrods</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/hRLsnfgY/Rectangle-3-7.png" alt="Movie" />
                     </figure>
                 </div>
             </div>
