--- a/index.html
+++ b/index.html
@@ -266,6 +266,28 @@
                 </div>
             </div>
         </section>
+        <!-- Short Connect Buyers & Sellers Globally Section -->
+        <section class="bg-[#1B768D] py-12">
+            <h1 class="text-2xl font-medium text-center text-white">Connect Buyers & Sellers Globally</h1>
+            <div class="container mx-auto flex flex-col md:flex-row justify-between items-center gap-8 mt-8">
+                <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
+                    <i class="fa-solid fa-handshake text-3xl"></i>
+                    <h2 class="text-xl font-medium">Trusted Platform</h2>
+                </div>
+                <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
+                    <i class="fa-solid fa-shield-halved text-3xl"></i>
+                    <h2 class="text-xl font-medium">Safe & Secure</h2>
+                </div>
+                <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
+                    <i class="fa-solid fa-envelope text-3xl"></i>
+                    <h2 class="text-xl font-medium">Quick Assistance</h2>
+                </div>
+                <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
+                    <i class="fa-solid fa-headset text-3xl"></i>
+                    <h2 class="text-xl font-medium">24/7 Hours Services</h2>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
