add Suppliers Featured Area section

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             </div>
         </section>
         <!-- Short Connect Buyers & Sellers Globally Section -->
-        <section class="bg-[#1B768D] py-12">
+        <section class="bg-[#1B768D] py-12 mb-12">
             <h1 class="text-2xl font-medium text-center text-white">Connect Buyers & Sellers Globally</h1>
             <div class="container mx-auto flex flex-col md:flex-row justify-between items-center gap-8 mt-8">
                 <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
@@ -285,6 +285,86 @@
                 <div class="text-[#1B768D] bg-white px-12 md:w-3/12 py-6 rounded-xl text-center">
                     <i class="fa-solid fa-headset text-3xl"></i>
                     <h2 class="text-xl font-medium">24/7 Hours Services</h2>
+                </div>
+            </div>
+        </section>
+        <!--This is Suppliers Featured Area Section -->
+        <section class="container mx-auto mb-12">
+            <h1 class="text-2xl font-medium text-center">Suppliers Featured Area</h1>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 mt-8">
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/V0px2WFv/Rectangle-5.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Dhaka</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/G4GgQfmM/Rectangle-5-1.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Khulna</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/S1wq6WP/Rectangle-5-2.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Barisal</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px] "
+                    style="background-image: url(https://i.ibb.co.com/MDFRR5ZX/Rectangle-5-3.png);">
+                    <div class="hero-overlay rounded-xl "></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Chattogram</h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8 mt-8">
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/yBfQfHDX/Rectangle-5.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Rajshahi</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/GfbfyMmn/Rectangle-5-1.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Rangpur</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px]"
+                    style="background-image: url(https://i.ibb.co.com/LhJJPKfT/Rectangle-5-2.png);">
+                    <div class="hero-overlay rounded-xl"></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Mymensingh</h1>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero rounded-xl h-[164px] "
+                    style="background-image: url(https://i.ibb.co.com/Fbkyw1Nr/Rectangle-5-3.png);">
+                    <div class="hero-overlay rounded-xl "></div>
+                    <div class="hero-content text-neutral-content text-center">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-2xl font-bold">Sylhet</h1>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
