--- a/index.html
+++ b/index.html
@@ -368,9 +368,172 @@
                 </div>
             </div>
         </section>
+        <!-- All Store Section -->
+        <section class="container mx-auto mb-12">
+            <div class="flex justify-between items-center">
+                <h1 class="text-2xl font-medium">All Store</h1>
+                <p>See All</p>
+            </div>
+            <!-- 1st Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Lf3zdyt/Rectangle-3-2.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">SamborN</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6"
+                            src="https://i.ibb.co.com/7JLHWx6V/bay-logo-images-Bco-DWw-Q-9rhtk-Ci-1.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 2nd Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6 w-[184px] h-[100px]" src="https://i.ibb.co.com/zW1bLBTc/apex.png"
+                            alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">SamborN</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6 w-[300px] h-[100px]" src="https://i.ibb.co.com/dsncFTGT/bagtag.png"
+                            alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 3rd Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/hRLsnfgY/Rectangle-3-7.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">SamborN</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/0R4xBRPt/Rectangle-3-6.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+            <!-- 4th Row -->
+            <div class="mt-8 flex flex-col md:flex-row justify-between gap-8">
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">Bag Packer's</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Salimullah
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Q3ptXxzh/Rectangle-3-5.png" alt="Movie" />
+                    </figure>
+                </div>
+                <div class="card card-side justify-between border border-[#0000004D] bg-base-100 shadow-sm md:w-6/12">
+                    <div class="ml-6 py-5 space-y-4">
+                        <h2 class="card-title">SamborN</h2>
+                        <p class="text-[#333333]"><span><i class="fa-solid fa-location-dot"></i></span> Satmasjid
+                            Rd,Mohammadpur</p>
+                        <p class="text-[#1B768D] font-medium">Bag Store</p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] text-white text-base w-full">View Details</button>
+                        </div>
+                    </div>
+                    <figure>
+                        <img class="py-5 mr-6" src="https://i.ibb.co.com/Lf3zdyt/Rectangle-3-2.png" alt="Movie" />
+                    </figure>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="bg-neutral">
+        <footer class="footer sm:footer-horizontal container mx-auto text-neutral-content p-10">
+            <nav>
+                <h6 class="footer-title">About</h6>
+                <a class="link link-hover">About</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Privacy  Policy</a>
+                <a class="link link-hover">Terms & Condition</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Contact</h6>
+                <a class="link link-hover">House#42, Road-3/A, Dhanmondi,
+                    Dhaka-1209, Bangladesh</a>
+                <a class="link link-hover">Email: skybuybd@gmail.com</a>
+                <a class="link link-hover">Phone: 09613828606</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Support</h6>
+                <a class="link link-hover">Shipping Charge</a>
+                <a class="link link-hover">Secured Payment</a>
+                <a class="link link-hover">Retail Purchase</a>
+                <a class="link link-hover">FAQ</a>
+            </nav>
+            <nav>
+                <h6 class="footer-title">Follow Us</h6>
+                <a class="link link-hover">Facebook</a>
+                <a class="link link-hover">Instagram</a>
+                <a class="link link-hover">Youtube</a>
+                <a class="link link-hover">LinkedIn</a>
+            </nav>
+        </footer>
     </footer>
 </body>
 
