add best seller section

--- a/index.html
+++ b/index.html
@@ -502,6 +502,27 @@
                 </div>
             </div>
         </section>
+        <!-- This is Best Seller Section -->
+        <section class="container mx-auto mb-12">
+            <div class="flex justify-between items-center">
+                <h1 class="text-2xl font-medium">Best Sellers</h1>
+                <p>See All</p>
+            </div>
+            <div class="mt-8 grid grid-cols-2 md:grid-cols-4 gap-6">
+                <div class="bg-white shadow-2xl py-11 rounded-xl">
+                    <img class="mx-auto" src="https://i.ibb.co.com/zVCZX16p/apex-shoes-1.png" alt="">
+                </div>
+                <div class="bg-white shadow-2xl py-11 rounded-xl">
+                    <img class="mx-auto" src="https://i.ibb.co.com/k6JhTNhZ/yellow-2.png" alt="">
+                </div>
+                <div class="bg-white shadow-2xl py-11 rounded-xl">
+                    <img class="mx-auto" src="https://i.ibb.co.com/8LzqssXZ/lotto.png" alt="">
+                </div>
+                <div class="bg-white shadow-2xl py-11 rounded-xl">
+                    <img class="mx-auto" src="https://i.ibb.co.com/7tSShyGp/bay.png" alt="">
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="bg-neutral">
         <footer class="footer sm:footer-horizontal container mx-auto text-neutral-content p-10">
@@ -509,7 +530,7 @@
                 <h6 class="footer-title">About</h6>
                 <a class="link link-hover">About</a>
                 <a class="link link-hover">Contact</a>
-                <a class="link link-hover">Privacy  Policy</a>
+                <a class="link link-hover">Privacy Policy</a>
                 <a class="link link-hover">Terms & Condition</a>
             </nav>
             <nav>
