add recent blogs section

--- a/index.html
+++ b/index.html
@@ -523,6 +523,68 @@
                 </div>
             </div>
         </section>
+        <!-- This is Blog Section -->
+        <section class="container mx-auto mb-12">
+            <div class="flex justify-between items-center mb-8">
+                <h1 class="text-2xl font-medium">Recent Blogs</h1>
+                <p>See All</p>
+            </div>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img class="w-full" src="https://i.ibb.co.com/ZpvNqfJb/image-5.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Why Buying in Bulk Saves You More</h2>
+                        <p>Learn how wholesale shopping can cut costs, boost profit margins, and help you scale faster.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] w-full text-white">View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img class="w-full" src="https://i.ibb.co.com/YTXQKxc3/image-4.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">Top Wholesale Products to Resell</h2>
+                        <p>Discover high-demand items perfect for reselling and growing your small business this year.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] w-full text-white">View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img class="w-full" src="https://i.ibb.co.com/x8hdBpP4/image-7.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">What's Better for Your Business?</h2>
+                        <p>Compare online wholesale with local bulk shopping and find out what works best.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] w-full text-white">View Details</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img class="w-full" src="https://i.ibb.co.com/6Gf5vHL/image-8.png"
+                            alt="Shoes" />
+                    </figure>
+                    <div class="card-body">
+                        <h2 class="card-title">How to Start Reselling Like a Pro</h2>
+                        <p>Learn how wholesale shopping can cut costs, boost profit margins, and help you scale faster.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-[#1B768D] w-full text-white">View Details</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="bg-neutral">
         <footer class="footer sm:footer-horizontal container mx-auto text-neutral-content p-10">
